@@ -53,6 +53,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
+		<!-- Add mockito-inline instead of mockito-core -->
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-inline</artifactId>
+			<version>4.0.0</version> <!-- Use the latest version -->
+			<scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -60,6 +68,27 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.5.2</version>
+				<configuration>
+					<argLine>
+						--add-opens java.base/java.lang=ALL-UNNAMED
+						--add-opens java.base/java.util=ALL-UNNAMED
+						--add-opens java.base/java.util.concurrent=ALL-UNNAMED
+						--add-opens java.rmi/sun.rmi.transport=ALL-UNNAMED
+						<!---javaagent:"${settings.localRepository}/org/mockito/mockito-agent/5.2.0/mockito-agent-5.2.0.jar"-->
+					</argLine>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.mockito</groupId>
+						<artifactId>mockito-junit-jupiter</artifactId>
+						<version>5.2.0</version> <!-- Use the latest version -->
+					</dependency>
+				</dependencies>
 			</plugin>
 		</plugins>
 	</build>
